String additions to ‘gnome-initial-setup.gnome-45’
This is an automatic notification from status generation scripts on: https://l10n.gnome.org.
There have been following string additions to module gnome-initial-setup.gnome-45
:
-
Failed to cache account
(gnome-initial-setup/pages/account/gis-account-page-enterprise.c:181)
Maintainer(s), @matthiasc, @wjt feel free to jump in if you can help figuring this out.
Note that this doesn’t directly indicate a string freeze break, but it might be worth investigating. https://gitlab.gnome.org/GNOME/gnome-initial-setup/commits/gnome-45